[package]
name = "dioxus-leaflet"
version = "0.3.1"
authors = [
    "Lucas Heintzmann <lheintzmann1@disroot.org>",
    "Steven Vergenz <1882376+stevenvergenz@users.noreply.github.com>",
]
license = "MIT OR Apache-2.0"
description = "A general-purpose Leaflet map component for Dioxus applications"
homepage = "https://github.com/lheintzmann1/dioxus-leaflet"
repository = "https://github.com/lheintzmann1/dioxus-leaflet"
readme = "../README.md"
edition = "2024"

[dependencies]
dioxus = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
fastrand = "2.0"
dioxus-logger = "0.7.2"
color = { version = "0.3.2", features = ["serde"] }
dioxus-use-js = "0.4.6"

[build-dependencies]
dioxus-use-js = { version = "0.4.6", features = ["build"] }

[features]
default = []
